<resources>
    <string name="app_name">Моят дом</string>
    <string name="project_name">Име на проект</string>
    <string name="rooms">стаи</string>
    <string name="save">запази</string>
    <string name="cancel">отказ</string>
    <string name="budget">Бюджет</string>
    <string name="choose_product">Изберете продукт</string>
    <string name="lv">лв.</string>
    <string name="approximate_price">Ориентировъчна цена</string>
    <string name="from">от</string>
    <string name="to">до</string>
    <string name="price_bought_subject">Цена на закупен продукт</string>
    <string name="price">цена</string>
    <string name="projects">Проекти</string>
    <string name="new_project">Нов проект</string>
    <string name="new_room">Нова стая</string>
    <string name="delete">изтрий</string>
    <string name="changes_saved">Промените са запазени</string>
    <string name="your_budget_is">Вашият бюджет е</string>
    <string name="budget_spent">Изразходен бюджет</string>
    <string name="exceed_budget">Надвишавате вашия бюджет с</string>
    <string name="budget_left">Остатък от вашия бюджет</string>
    <string name="no_subjects_added">Няма добавено обзавеждане </string>
    <!-- стаи -->
    <string name="bath_room">Баня</string>
    <string name="kitchen">Кухня</string>
    <string name="living_room">Всекидневна</string>
    <string name="dining_room">Трапезария</string>
    <string name="bed_room">Спалня</string>
    <string name="cabinet">Кабинет</string>
    <string name="url">url</string>
    <string name="subjects_list">Списък с обзавеждане</string>
    <!-- обзавеждане -->
    <string name="bed">Легло</string>
    <string name="wardrobe">Гардероб</string>
    <string name="commode">Шкаф/Скрин</string>
    <string name="hanger">Закачалка</string>
    <string name="table">Маса</string>
    <string name="chair">Стол</string>
    <string name="sofa">Диван</string>
    <string name="desk">Бюро</string>
    <string name="unit">Секция</string>
    <string name="fridge">Хладилник</string>
    <string name="oven">Печка</string>
    <string name="dishwasher">Съдомиялна</string>
    <string name="absorber">Абсорбатор/Аспиратор</string>
    <string name="drying_machine">Сушилня</string>
    <string name="tv">Телевизор</string>
    <string name="climatic">Климатик</string>
    <string name="couch">Канапе</string>
    <string name="carpet">Килим</string>
    <string name="parquet">Паркет</string>
    <string name="tiles">Плочки</string>
    <string name="portmanteau">Портманто</string>

    <string name="shower">Душ</string>
    <string name="bathtub">Вана</string>
    <string name="shower_cabin">Душ кабина</string>
    <string name="sink">Мивка</string>
    <string name="toilet_seat">Тоалетна чиния</string>
    <string name="mirror">Огледало</string>
</resources>
