<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable name="room" type="com.jenny.database.Room" />
        <variable name="subject" type="com.jenny.database.Subject" />
        <variable name="roomSummary" type="com.jenny.binding.RoomSummary" />
    </data>
    <LinearLayout
        android:id="@+id/activity_room"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.jenny.myhome.RoomActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@{room.project.name}" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="-" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@{room.roomType.toString()}" />
        </LinearLayout>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":" />
            <EditText android:id="@+id/budget_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:text="@={room.budget}"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lv" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_product" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":" />
            <Spinner android:id="@+id/subjects_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/approximate_price"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:text="@={subject.minPrice}"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="-"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:text="@={subject.maxPrice}"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lv"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_bought_subject" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:text="@={subject.price}"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lv" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/url"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"/>
        </TableRow>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={subject.url}" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onAddSubjectClick"
            android:src="@drawable/ic_add_circle_outline_black_24dp"
            android:text="+"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subjects_list"
                android:textAppearance="?android:textAppearanceMedium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text=":"
                android:textAppearance="?android:textAppearanceMedium"/>
        </LinearLayout>
        <ListView android:id="@+id/subjects_listview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:items="@{roomSummary.subjects}" />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/your_budget_is"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginEnd="@dimen/five_dp"
                android:text=":" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@{String.valueOf(roomSummary.budget)}"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/lv"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/budget_spent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginEnd="@dimen/five_dp"
                android:text=":"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@{String.valueOf(roomSummary.sum)}"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/lv" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/exceed_budget"
                android:visibility="@{roomSummary.diff &lt; 0d ? View.VISIBLE : View.GONE}"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/budget_left"
                android:visibility="@{roomSummary.diff &gt; 0d  || roomSummary.diff == 0d? View.VISIBLE : View.GONE}"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginEnd="@dimen/five_dp"
                android:text=":"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@{String.valueOf(roomSummary.diff)}"
                android:textColor="@{roomSummary.diff}"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/lv" />
        </TableRow>
    </LinearLayout>
</layout>
