<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <import type="com.jenny.myhome.RoomType" />
        <variable name="project"
            type="com.jenny.database.Project" />
    </data>
    <RelativeLayout
        android:id="@+id/activity_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.jenny.myhome.HomeActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{project.name}"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:onClick="onProjectNameClick" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onProjectNameClick"
                android:src="@drawable/ic_create_orange_24dp"
                android:background="@color/transparent"/>
        </LinearLayout>
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/apartment">
            <TableRow android:layout_weight="5">
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:visibility="invisible" />
            </TableRow>
            <TableRow android:layout_weight="15">
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:alpha="0" />
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="40"
                    android:background="@color/transparent"
                    android:text="@string/cabinet"
                    android:tag="@{RoomType.CABINET}"
                    android:onClick="onRoomClick" />
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:alpha="0" />
            </TableRow>
            <TableRow android:layout_weight="55">
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="10"
                    android:alpha="0"/>
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="25"
                    android:background="@color/transparent"
                    android:paddingStart="10dp"
                    android:text="@string/living_room"
                    android:tag="@{RoomType.LIVING_ROOM}"
                    android:onClick="onRoomClick" />
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:background="@color/transparent"
                    android:text="@string/bed_room"
                    android:tag="@{RoomType.BED_ROOM}"
                    android:onClick="onRoomClick" />
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="25"
                    android:background="@color/transparent"
                    android:text="@string/kitchen"
                    android:tag="@{RoomType.KITCHEN}"
                    android:onClick="onRoomClick" />
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="10"
                    android:alpha="0"/>
            </TableRow>
            <TableRow android:layout_weight="15">
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="10"
                    android:alpha="0" />
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="20"
                    android:background="@color/transparent"
                    android:text="@string/bath_room"
                    android:tag="@{RoomType.BATH_ROOM}"
                    android:onClick="onRoomClick" />
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="70"
                    android:alpha="0" />
            </TableRow>
            <TableRow android:layout_weight="10">
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:alpha="0" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</layout>
